--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,1 +1,10 @@
-Header
+<!-- Title -->
+<div style="float: left; width: 80px; height: 80px;"><img
+    src="images/pyspread.png" style="margin-left: 15px;
+    margin-right: 30px; margin-top: 10px;" alt="Logo" height="57"
+    width="44"></div>
+<div style="width: 400px; height: 80px;">
+    <h1 id="title">pyspread</h1>
+    <h3>Python power for your tables</h3>
+</div>
+
