--- a/_layouts/default_docs.html
+++ b/_layouts/default_docs.html
@@ -7,6 +7,6 @@
     {% include header.html %}
     {% include menu_docs.html %}
     {{content}}
-    {% include first_steps.html %}
+    {% include content/first_steps.html %}
   </body>
 </html>
