--- a/_includes/head.html
+++ b/_includes/head.html
@@ -62,6 +62,7 @@
 
     /* Title box */
     #title {
+    font-family: Arial,Helvetica,sans-serif;
     font-size:28px;
     font-weight:bold;
     padding-top:0px;
