--- a/_includes/head.html
+++ b/_includes/head.html
@@ -17,6 +17,11 @@
         font-size: 2em;
         font-weight: bold;
     }
+    h2: {
+        font-family: Arial,Helvetica,sans-serif;
+        font-size: 1em;
+        font-weight: bold;
+    }
     h3 {
         font-family: Arial,Helvetica,sans-serif;
         font-weight: normal;
@@ -45,19 +50,21 @@
     
     a:link, a:visited, a:active, a:hover
     {
-
+        text-decoration:underline;
+        font-weight:bold;
+        color:#777777;
     }
     a:active, a:hover
     {
-    color:#000000;
+        color:#000000;
     }
     a.menu:link, a.menu:visited
     {
-    color:#777777;
+        color:#777777;
     }
     a.menu:active, a.menu:hover
     {
-    color:#000000;
+        color:#000000;
     }
 
     /* Title box */
