--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -5,7 +5,7 @@
   </head>
   <body>
     {% include header.html %}
-    {% include menu_docs.html %}
+    {% include menu.html %}
     {{content}}
   </body>
 </html>
