--- a/_includes/header.html
+++ b/_includes/header.html
@@ -5,6 +5,6 @@
     width="44"></div>
 <div style="width: 400px; height: 80px;">
     <h1 id="title">pyspread</h1>
-    <h3>Python power for your tables</h3>
+    Python power for your tables
 </div>
 
