--- a/_includes/head.html
+++ b/_includes/head.html
@@ -9,6 +9,7 @@
 <style type="text/css">
     body
     {
+        font-family: Arial,Helvetica,sans-serif;
         background-color:#ffffff;
     }
 
