HTML error fixed

--- a/_includes/content/home.html
+++ b/_includes/content/home.html
@@ -44,7 +44,7 @@
             execution <br>
             </li>
             <li>Python module access, which allows:</li>
-            <ul>
+            
             <li>Matrix operations via <a
                 href="http://www.numpy.org/">numpy</a></li>
             <li>Fixed point decimal numbers for business
@@ -53,14 +53,9 @@
             </li>
             <li>Advanced plotting via <a
                 href="http://matplotlib.org/">matplotlib</a></li>
-            <li>Much more via <span style="font-style: italic;">&lt;your
-
-
-
-
-
-                favorite module&gt;</span></li>
-            </ul>
+            <li>Much more via <span style="font-style: italic;">
+            &lt;your favorite module&gt;</span></li>
+            
         </ul>
         </td>
         <td style="vertical-align: top;"><br>
