HTML error fixed

--- a/_includes/content/docs.html
+++ b/_includes/content/docs.html
@@ -50,7 +50,7 @@ data.</a><br>
     </tr>
   </tbody>
 </table>
-<p><span style="font-style: italic;"><small>Copyright Martin Manns</font></small><font size="-1"><br>
+<p><span style="font-style: italic;"><small>Copyright Martin Manns</small><font size="-1"><br>
 Contact mmanns &lt; at &gt; gmx &lt; dot &gt; net<br
  style="font-style: italic;">
 </font>
