HTML errors fixed

--- a/_includes/content/contribute.html
+++ b/_includes/content/contribute.html
@@ -82,27 +82,14 @@
         <th style="vertical-align: top; width: 102px;">code base<br>
         </th>
         <td style="vertical-align: top;">
-        <meta http-equiv="CONTENT-TYPE" content="text/html;
-            charset=UTF-8">
         <p class="western" style="margin-bottom: 0in;" lang="en-US">This
-
-
-
-
             information refers to pyspread v. 0.2.3. The image on the
             right refers to v. 0.2.2. Therefore, it is missing the
             module chart_dialog.py, which implements the chart editing
-            diaog.</p>
+            dialog.</p>
         <p class="western" style="margin-bottom: 0in" lang="en-US">
             Version 0.1.2 and previous have a different structure.</p>
         <p class="western" style="margin-bottom: 0in;" lang="en-US">The
-
-
-
-
-
-
-
             code is organized in the src folder. There are the
             following sub-folders:</p>
         <ul>
@@ -121,41 +108,6 @@
             <li>lib: Generically usable libraries<br>
             </li>
         </ul>
-        <p class="western" style="margin-bottom: 0in;" lang="en-US">
-            <meta http-equiv="CONTENT-TYPE" content="text/html;
-            charset=UTF-8">
-        </p>
-        <p class="western" style="margin-bottom: 0in;" lang="en-US">
-            <title></title>
-            <meta name="GENERATOR" content="LibreOffice 3.5 (Linux)">
-            <style type="text/css">
-<!--
-    @page { margin: 0.79in }
-    H2 { margin-bottom: 0.08in }
-    H2.western { font-family: "Liberation Sans"; font-size: 12pt; so-language: en-US; font-style: normal }
-    H2.cjk { font-size: 14pt; font-style: italic; font-weight: normal }
-    H2.ctl { font-family: "FreeSans"; font-size: 14pt; font-style: italic }
-    P { margin-bottom: 0.08in }
-    P.western { so-language: en-US }
-    P.cjk { font-size: 10pt }
--->
-</style> </p>
-        <h2 class="western" lang="en-US">
-            <meta http-equiv="CONTENT-TYPE" content="text/html;
-            charset=UTF-8">
-        </h2>
-        <p></p>
-        <h2 class="western" lang="en-US">
-            <title></title>
-            <meta name="GENERATOR" content="LibreOffice 3.5 (Linux)">
-            <style type="text/css">
-<!--
-    @page { margin: 0.79in }
-    P { margin-bottom: 0.08in }
-    P.western { so-language: en-US }
-    P.cjk { font-size: 10pt }
--->
-</style>
             <p class="western" style="margin-bottom: 0in; font-weight:
             normal;" lang="en-US">The figure on the right displays
             class instance dependencies of the different layers.<br>
@@ -211,20 +163,7 @@
             python-gnupg related code can be found in lib/gpg.py</p>
         <p class="western" style="margin-bottom: 0in" lang="en-US"><br>
             numpy related code can be found in model/model.py</p>
-        <p></p>
-        <title></title>
-        <meta name="GENERATOR" content="LibreOffice 3.5 (Linux)">
-        <style type="text/css">
-<!--
-    @page { margin: 0.79in }
-    TD P { margin-bottom: 0in }
-    TD P.western { so-language: en-US }
-    TD P.cjk { font-size: 10pt }
-    P { margin-bottom: 0.08in }
-    P.western { so-language: en-US }
-    P.cjk { font-size: 10pt }
--->
-</style></td>
+        </td>
         <td style="vertical-align: top;"><br>
         </td>
         <td style="vertical-align: top;"><a
