--- a/_includes/content/faq.html
+++ b/_includes/content/faq.html
@@ -1,9 +1,4 @@
-<h1>
-    <p style="margin-top: 0.17in; page-break-after: avoid; text-align:
-    left;"><font face="Liberation Sans"><font size="5"><b>pyspread
-            FAQ</b></font></font><br>
-    </p>
-</h1>
+<h1>pyspread FAQ</h1>
 <table style="text-align: left; width: 100%; margin-left: auto;
     margin-right: auto;" border="0" cellpadding="15" cellspacing="0">
     <tbody>
