--- a/_includes/content/faq.html
+++ b/_includes/content/faq.html
@@ -1,4 +1,5 @@
-<h1>pyspread FAQ</h1>
+<h1><font size="5"><b>pyspread FAQ</b></font><br></h1>
+
 <table style="text-align: left; width: 100%; margin-left: auto;
     margin-right: auto;" border="0" cellpadding="15" cellspacing="0">
     <tbody>
