HTML error fixed

--- a/_includes/content/faq.html
+++ b/_includes/content/faq.html
@@ -1,4 +1,4 @@
-<h1 id="title">pyspread FAQ</h1>
+<h1 class="title">pyspread FAQ</h1>
 
 <table style="text-align: left; width: 100%; margin-left: auto;
     margin-right: auto;" border="0" cellpadding="15" cellspacing="0">
