HTML error fixe

--- a/_includes/content/faq.html
+++ b/_includes/content/faq.html
@@ -70,7 +70,7 @@
         old
         format? </th>
         <td style="vertical-align: top;">
-        <style type="text/css">p { margin-bottom: 0.08in; }p.western {  }p.cjk { font-size: 10pt; }h2 { margin-top: 0.07in; margin-bottom: 0.07in; text-decoration: underline; }h2.western { font-family: "Liberation Sans"; font-size: 12pt; font-style: normal; }h2.cjk { font-size: 14pt; font-style: italic; font-weight: normal; }h2.ctl { font-family: "FreeSans"; font-size: 14pt; font-style: italic; }a:link {  }</style>Unfortunately not.
+        Unfortunately not.
         If you have old pys files, install both
         versions of pyspread and copy the cell contents via the
         Clipboard from
@@ -88,7 +88,5 @@
         Contact mmanns &lt; at &gt; gmx &lt; dot &gt; net<br
         style="font-style: italic;">
     </font>
-    </span><font size="-1"><span style="font-style: italic;">Last
-        changed: 12. May 2013
-    </span></font></p>
+    </span><font size="-1"><span style="font-style: italic;">Last changed: 12. May 2013</span></font></p>
 <p><span style="font-style: italic;"><small></small></span></p>
