HTML error fixed

--- a/_includes/content/first_steps.html
+++ b/_includes/content/first_steps.html
@@ -1,9 +1,4 @@
-    <h1>
-      <p style="margin-top: 0.17in; page-break-after: avoid; text-align:
-        left;"><font face="Liberation Sans"><font size="5"><b>First
-              steps into pyspread</b></font></font><br>
-      </p>
-    </h1>
+    <h1 class="title">First steps into pyspread</h1>
     <table style="text-align: left; width: 100%; margin-left: auto;
       margin-right: auto;" border="0" cellpadding="15" cellspacing="0">
       <tbody>
@@ -72,7 +67,6 @@
           <th style="vertical-align: top;">Installation<br>
           </th>
           <td style="vertical-align: top;">
-            <style type="text/css">p { margin-bottom: 0.08in; }p.western {  }p.cjk { font-size: 10pt; }h2 { margin-top: 0.07in; margin-bottom: 0.07in; text-decoration: underline; }h2.western { font-family: "Liberation Sans"; font-size: 12pt; font-style: normal; }h2.cjk { font-size: 14pt; font-style: italic; font-weight: normal; }h2.ctl { font-family: "FreeSans"; font-size: 14pt; font-style: italic; }a:link {  }</style>
             <h2 class="western" lang="en-US">Requirements</h2>
             <p class="western" lang="en-US">Linux and *nix platforms
               with GTK+ support.<br>
@@ -142,7 +136,6 @@
           <th style="vertical-align: top;">The pyspread workplace<br>
           </th>
           <td style="vertical-align: top;">
-            <style type="text/css">p { margin-bottom: 0.08in; }p.western {  }p.cjk { font-size: 10pt; }h2 { margin-top: 0.07in; margin-bottom: 0.07in; text-decoration: underline; }h2.western { font-family: "Liberation Sans"; font-size: 12pt; font-style: normal; }h2.cjk { font-size: 14pt; font-style: italic; font-weight: normal; }h2.ctl { font-family: "FreeSans"; font-size: 14pt; font-style: italic; }</style>
             <h2 class="western" lang="en-US">Starting and quitting
               pyspread</h2>
             <p class="western" lang="en-US">Type</p>
@@ -240,7 +233,6 @@
           <th style="vertical-align: top;">Basic concepts<br>
           </th>
           <td style="vertical-align: top;">
-            <style type="text/css">p { margin-bottom: 0.08in; }p.western {  }p.cjk { font-size: 10pt; }h2 { margin-top: 0.07in; margin-bottom: 0.07in; text-decoration: underline; }h2.western { font-family: "Liberation Sans"; font-size: 12pt; font-style: normal; }h2.cjk { font-size: 14pt; font-style: italic; font-weight: normal; }h2.ctl { font-family: "FreeSans"; font-size: 14pt; font-style: italic; }p.code-western { background: transparent none repeat scroll 0% 0%; -moz-background-clip: border; -moz-background-origin: padding; -moz-background-inline-policy: continuous; font-family: "DejaVu Sans Mono",monospace; font-size: 10pt; }p.code-cjk { background: transparent none repeat scroll 0% 0%; -moz-background-clip: border; -moz-background-origin: padding; -moz-background-inline-policy: continuous; font-size: 10pt; }p.code-ctl { background: transparent none repeat scroll 0% 0%; -moz-background-clip: border; -moz-background-origin: padding; -moz-background-inline-policy: continuous; }</style>
             <h2 class="western" lang="en-US">3D grid</h2>
             <p class="western" lang="en-US">Pyspread features only one
               grid at a time. However, this grid is 3D, i. e. there are
@@ -357,7 +349,6 @@
           <th style="vertical-align: top;">Common spreadsheet tasks<br>
           </th>
           <td style="vertical-align: top;">
-            <style type="text/css">p { margin-bottom: 0.08in; }p.western {  }p.cjk { font-size: 10pt; }h2 { margin-top: 0.07in; margin-bottom: 0.07in; text-decoration: underline; }h2.western { font-family: "Liberation Sans"; font-size: 12pt; font-style: normal; }h2.cjk { font-size: 14pt; font-style: italic; font-weight: normal; }h2.ctl { font-family: "FreeSans"; font-size: 14pt; font-style: italic; }h3 { margin-top: 0.07in; margin-bottom: 0.04in; text-decoration: underline; }h3.western { font-family: "Arial",sans-serif; font-size: 12pt; font-weight: normal; }h3.ctl { font-family: "FreeSans"; }</style>
             <h2 class="western" lang="en-US">Moving in the spreadsheet</h2>
             <p class="western" lang="en-US">Movement in the grid can be
               achieved by:</p>
@@ -527,7 +518,6 @@
           <td style="vertical-align: top;"><br>
           </td>
           <td style="vertical-align: top;">
-            <style type="text/css">p { margin-bottom: 0.08in; }p.western {  }p.cjk { font-size: 10pt; }h2 { margin-top: 0.07in; margin-bottom: 0.07in; text-decoration: underline; }h2.western { font-family: "Liberation Sans"; font-size: 12pt; font-style: normal; }h2.cjk { font-size: 14pt; font-style: italic; font-weight: normal; }h2.ctl { font-family: "FreeSans"; font-size: 14pt; font-style: italic; }</style>
             <h2 class="western" lang="en-US">Creating an empty
               spreadsheet</h2>
             <p class="western" lang="en-US">An empty spreadsheet can be
@@ -539,7 +529,6 @@
               wx.Python. Therefore, grids with more than 80 million rows
               and 30 million columns may show problems and
               instabilities.<br>
-              <style type="text/css">p { margin-bottom: 0.08in; }p.western {  }p.cjk { font-size: 10pt; }p.code-western { background: transparent none repeat scroll 0% 0%; -moz-background-clip: border; -moz-background-origin: padding; -moz-background-inline-policy: continuous; font-family: "DejaVu Sans Mono",monospace; font-size: 10pt; }p.code-cjk { background: transparent none repeat scroll 0% 0%; -moz-background-clip: border; -moz-background-origin: padding; -moz-background-inline-policy: continuous; font-size: 10pt; }p.code-ctl { background: transparent none repeat scroll 0% 0%; -moz-background-clip: border; -moz-background-origin: padding; -moz-background-inline-policy: continuous; }h2 { margin-top: 0.07in; margin-bottom: 0.07in; text-decoration: underline; }h2.western { font-family: "Liberation Sans"; font-size: 12pt; font-style: normal; }h2.cjk { font-size: 14pt; font-style: italic; font-weight: normal; }h2.ctl { font-family: "FreeSans"; font-size: 14pt; font-style: italic; }</style>
             </p>
           </td>
           <td style="vertical-align: top;"><br>
@@ -611,7 +600,6 @@
           <td style="vertical-align: top;"><br>
           </td>
           <td style="vertical-align: top;">
-            <style type="text/css">p { margin-bottom: 0.08in; }p.western {  }p.cjk { font-size: 10pt; }h2 { margin-top: 0.07in; margin-bottom: 0.07in; text-decoration: underline; }h2.western { font-family: "Liberation Sans"; font-size: 12pt; font-style: normal; }h2.cjk { font-size: 14pt; font-style: italic; font-weight: normal; }h2.ctl { font-family: "FreeSans"; font-size: 14pt; font-style: italic; }</style>
             <h2 class="western" lang="en-US">CSV data import and export</h2>
             <p class="western" lang="en-US">Pyspread can import and
               export csv data for interacting with other applications.
@@ -629,7 +617,6 @@
               possible. The grid of the import dialog only shows the
               first few rows of the csv files in order to give an
               impression how import data will look like in pyspread.<br>
-              <style type="text/css">p { margin-bottom: 0.08in; }p.western {  }p.cjk { font-size: 10pt; }h2 { margin-top: 0.07in; margin-bottom: 0.07in; text-decoration: underline; }h2.western { font-family: "Liberation Sans"; font-size: 12pt; font-style: normal; }h2.cjk { font-size: 14pt; font-style: italic; font-weight: normal; }h2.ctl { font-family: "FreeSans"; font-size: 14pt; font-style: italic; }</style>
             </p>
             <p class="western" lang="en-US">Importing a file always
               activates safe mode (when no signature file is created
@@ -666,7 +653,6 @@
           <td style="vertical-align: top;"><br>
           </td>
           <td style="vertical-align: top;">
-            <style type="text/css">p { margin-bottom: 0.08in; }p.western {  }p.cjk { font-size: 10pt; }h2 { margin-top: 0.07in; margin-bottom: 0.07in; text-decoration: underline; }h2.western { font-family: "Liberation Sans"; font-size: 12pt; font-style: normal; }h2.cjk { font-size: 14pt; font-style: italic; font-weight: normal; }h2.ctl { font-family: "FreeSans"; font-size: 14pt; font-style: italic; }</style>
             <h2 class="western" lang="en-US">Finding and replacing</h2>
             <p class="western" lang="en-US">Cell code and cell results
               can be searched with &lt;Ctrl&gt; + F or using the menu
@@ -682,7 +668,6 @@
               Strings that are found are replaced with the replace
               string. Note that replace only allows seraching in cell
               code and not in results.<br>
-              <style type="text/css">p { margin-bottom: 0.08in; }p.western {  }p.cjk { font-size: 10pt; }p.code-western { background: transparent none repeat scroll 0% 0%; -moz-background-clip: border; -moz-background-origin: padding; -moz-background-inline-policy: continuous; font-family: "DejaVu Sans Mono",monospace; font-size: 10pt; }p.code-cjk { background: transparent none repeat scroll 0% 0%; -moz-background-clip: border; -moz-background-origin: padding; -moz-background-inline-policy: continuous; font-size: 10pt; }p.code-ctl { background: transparent none repeat scroll 0% 0%; -moz-background-clip: border; -moz-background-origin: padding; -moz-background-inline-policy: continuous; }h2 { margin-top: 0.07in; margin-bottom: 0.07in; text-decoration: underline; }h2.western { font-family: "Liberation Sans"; font-size: 12pt; font-style: normal; }h2.cjk { font-size: 14pt; font-style: italic; font-weight: normal; }h2.ctl { font-family: "FreeSans"; font-size: 14pt; font-style: italic; }</style>
             </p>
           </td>
           <td style="vertical-align: top;"><br>
@@ -716,7 +701,6 @@
           <th style="vertical-align: top;">Working with formulas<br>
           </th>
           <td style="vertical-align: top;">
-            <style type="text/css">p { margin-bottom: 0.08in; }p.western {  }p.cjk { font-size: 10pt; }h2 { margin-top: 0.07in; margin-bottom: 0.07in; text-decoration: underline; }h2.western { font-family: "Liberation Sans"; font-size: 12pt; font-style: normal; }h2.cjk { font-size: 14pt; font-style: italic; font-weight: normal; }h2.ctl { font-family: "FreeSans"; font-size: 14pt; font-style: italic; }p.code-western { background: transparent none repeat scroll 0% 0%; -moz-background-clip: border; -moz-background-origin: padding; -moz-background-inline-policy: continuous; font-family: "DejaVu Sans Mono",monospace; font-size: 10pt; }p.code-cjk { background: transparent none repeat scroll 0% 0%; -moz-background-clip: border; -moz-background-origin: padding; -moz-background-inline-policy: continuous; font-size: 10pt; }p.code-ctl { background: transparent none repeat scroll 0% 0%; -moz-background-clip: border; -moz-background-origin: padding; -moz-background-inline-policy: continuous; }a:link {  }</style>
             <h2 class="western" lang="en-US">Grid cells expect Python
               expressions</h2>
             <p class="western" lang="en-US">Python expressions are terms
@@ -915,7 +899,6 @@
           <td style="vertical-align: top;"><br>
           </td>
           <td style="vertical-align: top;">
-            <style type="text/css">p { margin-bottom: 0.08in; }p.western {  }p.cjk { font-size: 10pt; }h2 { margin-top: 0.07in; margin-bottom: 0.07in; text-decoration: underline; }h2.western { font-family: "Liberation Sans"; font-size: 12pt; font-style: normal; }h2.cjk { font-size: 14pt; font-style: italic; font-weight: normal; }h2.ctl { font-family: "FreeSans"; font-size: 14pt; font-style: italic; }</style>
             <h2 class="western" lang="en-US">Macros</h2>
             <p class="western" lang="en-US">Since cell evaluation order
               is not guaranteed in pyspread, macros can be used for
@@ -927,7 +910,6 @@
               The editor allows editing a text file that is executed
               when the spreadsheet is opened or when its content is
               updated.<br>
-              <style type="text/css">p { margin-bottom: 0.08in; }p.western {  }p.cjk { font-size: 10pt; }h2 { margin-top: 0.07in; margin-bottom: 0.07in; text-decoration: underline; }h2.western { font-family: "Liberation Sans"; font-size: 12pt; font-style: normal; }h2.cjk { font-size: 14pt; font-style: italic; font-weight: normal; }h2.ctl { font-family: "FreeSans"; font-size: 14pt; font-style: italic; }p.code-western { background: transparent none repeat scroll 0% 0%; -moz-background-clip: border; -moz-background-origin: padding; -moz-background-inline-policy: continuous; font-family: "DejaVu Sans Mono",monospace; font-size: 10pt; }p.code-cjk { background: transparent none repeat scroll 0% 0%; -moz-background-clip: border; -moz-background-origin: padding; -moz-background-inline-policy: continuous; font-size: 10pt; }p.code-ctl { background: transparent none repeat scroll 0% 0%; -moz-background-clip: border; -moz-background-origin: padding; -moz-background-inline-policy: continuous; }</style>
             </p>
             <p class="western" lang="en-US">The scope of macro execution
               is global. Therefore, all functions are directly
@@ -1022,7 +1004,6 @@
           <th style="vertical-align: top;">Using help<br>
           </th>
           <td style="vertical-align: top;">
-            <style type="text/css">p { margin-bottom: 0.08in; }p.western {  }p.cjk { font-size: 10pt; }h2 { margin-top: 0.07in; margin-bottom: 0.07in; text-decoration: underline; }h2.western { font-family: "Liberation Sans"; font-size: 12pt; font-style: normal; }h2.cjk { font-size: 14pt; font-style: italic; font-weight: normal; }h2.ctl { font-family: "FreeSans"; font-size: 14pt; font-style: italic; }</style>
             <h2 class="western" lang="en-US">Access to this document</h2>
             <p class="western" lang="en-US">This document can be
               displayed from within pyspread via the menu with Help →
@@ -1042,7 +1023,6 @@
           <th style="vertical-align: top;">Grid layout<br>
           </th>
           <td style="vertical-align: top;">
-            <style type="text/css">p { margin-bottom: 0.08in; }p.western {  }p.cjk { font-size: 10pt; }h2 { margin-top: 0.07in; margin-bottom: 0.07in; text-decoration: underline; }h2.western { font-family: "Liberation Sans"; font-size: 12pt; font-style: normal; }h2.cjk { font-size: 14pt; font-style: italic; font-weight: normal; }h2.ctl { font-family: "FreeSans"; font-size: 14pt; font-style: italic; }</style>
             <h2 class="western" lang="en-US">Formatting basics</h2>
             <p class="western" lang="en-US">Grid formatting changes cell
               attributes for all cells in a selection. All formatting is
@@ -1142,7 +1122,6 @@
           <th style="vertical-align: top;">pyspread and security<br>
           </th>
           <td style="vertical-align: top;">
-            <style type="text/css">p { margin-bottom: 0.08in; }p.western {  }p.cjk { font-size: 10pt; }h2 { margin-top: 0.07in; margin-bottom: 0.07in; text-decoration: underline; }h2.western { font-family: "Liberation Sans"; font-size: 12pt; font-style: normal; }h2.cjk { font-size: 14pt; font-style: italic; font-weight: normal; }h2.ctl { font-family: "FreeSans"; font-size: 14pt; font-style: italic; }</style>
             <h2 class="western" lang="en-US">More than your average
               spreadsheet</h2>
             <p class="western" lang="en-US">Pyspread cells contain
@@ -1222,7 +1201,6 @@
           <th style="vertical-align: top;">Charts<br>
           </th>
           <td style="vertical-align: top;">
-            <style type="text/css">p { margin-bottom: 0.08in; }p.western {  }p.cjk { font-size: 10pt; }h2 { margin-top: 0.07in; margin-bottom: 0.07in; text-decoration: underline; }h2.western { font-family: "Liberation Sans"; font-size: 12pt; font-style: normal; }h2.cjk { font-size: 14pt; font-style: italic; font-weight: normal; }h2.ctl { font-family: "FreeSans"; font-size: 14pt; font-style: italic; }</style>
             <p class="western" lang="en-US">With version 0.2.3, <a
                 href="http://matplotlib.org/">matplotlib</a> charts are
               supported. Each cell, which yields a matplotlib figure
@@ -1294,7 +1272,6 @@
           <th style="vertical-align: top;">Advanced topics<br>
           </th>
           <td style="vertical-align: top;">
-            <style type="text/css">p { margin-bottom: 0.08in; }p.western {  }p.cjk { font-size: 10pt; }h2 { margin-top: 0.07in; margin-bottom: 0.07in; text-decoration: underline; }h2.western { font-family: "Liberation Sans"; font-size: 12pt; font-style: normal; }h2.cjk { font-size: 14pt; font-style: italic; font-weight: normal; }h2.ctl { font-family: "FreeSans"; font-size: 14pt; font-style: italic; }</style>
             <h2 class="western" lang="en-US">Drawing cell content with a
               cell formula</h2>
             To be done<br>
