Debian package location updated to Debian server

--- a/_includes/content/home.html
+++ b/_includes/content/home.html
@@ -74,7 +74,7 @@
         <td style="vertical-align: top; text-align: left;">April
         2013: The Debian package of pyspread 0.2.3 has been updated by
         Andreas Noteng. Get it <a
-            href="http://manns.github.com/pyspread/deb/pyspread_0.2.3-1_all.deb">here</a>.<br>
+            href="http://ftp.us.debian.org/debian/pool/main/p/pyspread/pyspread_0.2.3-2_all.deb">here</a>.<br>
         <br>
         January 2013: Pyspread 0.2.3 is out. Get it <a
 href="http://pypi.python.org/packages/source/p/pyspread/pyspread-0.2.3.tar.gz#md5=c1f5fbb05f6b64cacfb49db5c38a80e1">here</a>.
